Bedriftsmeny (#238)
* Henter alle bedrifter fra altinn for å populere bedriftsmeny

Co-authored-by: Sindre Løken <sindre.loken@nav.no>

* oppdatert mock og tester

* Endepunkt for å hente "Be om rettighet"-urler

* Tilbake til map

Co-authored-by: Sindre Løken <sindre.loken@nav.no>