@@ -15,9 +15,7 @@ import static org.mockito.Mockito.*;
 import java.time.Instant;
 import java.time.LocalDate;
 import java.time.temporal.ChronoUnit;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
+import java.util.*;
 
 public class InnloggetBrukerTest {
 
@@ -98,7 +96,7 @@ public class InnloggetBrukerTest {
     
     @Test
     public void harTilgang__arbeidsgiver_skal_ikke_ha_tilgang_til_avtale() {
-        assertThat(new InnloggetArbeidsgiver(TestData.etFodselsnummer(), emptyList(), Collections.emptySet()).harLeseTilgang(avtale)).isFalse();
+        assertThat(new InnloggetArbeidsgiver(TestData.etFodselsnummer(), Map.of(), Collections.emptySet()).harLeseTilgang(avtale)).isFalse();
     }
 
     @Test
@@ -113,22 +111,20 @@ public class InnloggetBrukerTest {
     
     @Test
     public void harTilgang__ikkepart_selvbetjeningsbruker_skal_ikke_ha_tilgang() {
-        assertThat(new InnloggetArbeidsgiver(new Fnr("00000000001"), emptyList(), Collections.emptySet()).harLeseTilgang(avtale)).isFalse();
+        assertThat(new InnloggetArbeidsgiver(new Fnr("00000000001"), Map.of(), Collections.emptySet()).harLeseTilgang(avtale)).isFalse();
     }
 
     @Test
     public void harTilgang__arbeidsgiver_skal_kunne_representere_bedrift_uten_Fnr() {
-        ArbeidsgiverOrganisasjon organisasjon = new ArbeidsgiverOrganisasjon(bedriftNr, "Testbutikken");
-        organisasjon.getTilgangstyper().addAll(List.of(Tiltakstype.values()));
-        InnloggetArbeidsgiver innloggetArbeidsgiver = new InnloggetArbeidsgiver(new Fnr("00000000009"), Arrays.asList(organisasjon), Collections.emptySet());
+        Map<BedriftNr, Collection<Tiltakstype>> tilganger = Map.of(this.bedriftNr, Set.of(Tiltakstype.values()));
+        InnloggetArbeidsgiver innloggetArbeidsgiver = new InnloggetArbeidsgiver(new Fnr("00000000009"), tilganger, Collections.emptySet());
         assertThat(innloggetArbeidsgiver.harLeseTilgang(avtale)).isTrue();
     }
 
     @Test
     public void harTilgang__arbeidsgiver_skal_ikke_ha_tilgang_til_avbrutt_avtale_eldre_enn_12_uker() {
-        ArbeidsgiverOrganisasjon organisasjon = new ArbeidsgiverOrganisasjon(bedriftNr, "Testbutikken");
-        organisasjon.getTilgangstyper().addAll(List.of(Tiltakstype.values()));
-        InnloggetArbeidsgiver innloggetArbeidsgiver = new InnloggetArbeidsgiver(new Fnr("00000000009"), Arrays.asList(organisasjon), Collections.emptySet());
+        Map<BedriftNr, Collection<Tiltakstype>> tilganger = Map.of(this.bedriftNr, Set.of(Tiltakstype.values()));
+        InnloggetArbeidsgiver innloggetArbeidsgiver = new InnloggetArbeidsgiver(new Fnr("00000000009"), tilganger, Collections.emptySet());
         avtale.setAvbrutt(true);
         avtale.setSistEndret(Instant.now().minus(84, ChronoUnit.DAYS));
         assertThat(innloggetArbeidsgiver.harLeseTilgang(avtale)).isFalse();
@@ -138,9 +134,8 @@ public class InnloggetBrukerTest {
     public void harTilgang__arbeidsgiver_skal_ikke_ha_tilgang_til_avsluttet_avtale_eldre_enn_12_uker() {
         Avtale avtale = TestData.enAvtaleMedAltUtfyltGodkjentAvVeileder();
         avtale.setSluttDato(LocalDate.now().minusDays(85));
-        ArbeidsgiverOrganisasjon organisasjon = new ArbeidsgiverOrganisasjon(avtale.getBedriftNr(), "Testbutikken");
-        organisasjon.getTilgangstyper().addAll(List.of(Tiltakstype.values()));
-        InnloggetArbeidsgiver innloggetArbeidsgiver = new InnloggetArbeidsgiver(new Fnr("00000000009"), Arrays.asList(organisasjon), Collections.emptySet());
+        Map<BedriftNr, Collection<Tiltakstype>> tilganger = Map.of(avtale.getBedriftNr(), Set.of(Tiltakstype.values()));
+        InnloggetArbeidsgiver innloggetArbeidsgiver = new InnloggetArbeidsgiver(new Fnr("00000000009"), tilganger, Collections.emptySet());
         assertThat(innloggetArbeidsgiver.harLeseTilgang(avtale)).isFalse();
     }
 
@@ -148,18 +143,16 @@ public class InnloggetBrukerTest {
     public void harTilgang__arbeidsgiver_skal_ha_tilgang_til_avsluttet_avtale_eldre_enn_12_uker_når_ikke_godkjent_av_veileder() {
         Avtale avtale = TestData.enAvtaleMedAltUtfylt();
         avtale.setSluttDato(LocalDate.now().minusDays(85));
-        ArbeidsgiverOrganisasjon organisasjon = new ArbeidsgiverOrganisasjon(avtale.getBedriftNr(), "Testbutikken");
-        organisasjon.getTilgangstyper().addAll(List.of(Tiltakstype.values()));
-        InnloggetArbeidsgiver innloggetArbeidsgiver = new InnloggetArbeidsgiver(new Fnr("00000000009"), Arrays.asList(organisasjon), Collections.emptySet());
+        Map<BedriftNr, Collection<Tiltakstype>> tilganger = Map.of(avtale.getBedriftNr(), Set.of(Tiltakstype.values()));
+        InnloggetArbeidsgiver innloggetArbeidsgiver = new InnloggetArbeidsgiver(new Fnr("00000000009"), tilganger, Collections.emptySet());
         assertThat(innloggetArbeidsgiver.harLeseTilgang(avtale)).isTrue();
     }
 
     @Test
     public void harTilgang__arbeidsgiver_med_arbeidsgivertilgang_skal_ikke_ha_lonnstilskuddtilgang() {
         Avtale avtale = TestData.enLonnstilskuddAvtaleMedAltUtfylt();
-        ArbeidsgiverOrganisasjon organisasjon = new ArbeidsgiverOrganisasjon(avtale.getBedriftNr(), "Testbutikken");
-        organisasjon.getTilgangstyper().add(Tiltakstype.ARBEIDSTRENING);
-        InnloggetArbeidsgiver innloggetArbeidsgiver = new InnloggetArbeidsgiver(new Fnr("00000000009"), Arrays.asList(organisasjon), Collections.emptySet());
+        Map<BedriftNr, Collection<Tiltakstype>> tilganger = Map.of(avtale.getBedriftNr(), Set.of(Tiltakstype.ARBEIDSTRENING));
+        InnloggetArbeidsgiver innloggetArbeidsgiver = new InnloggetArbeidsgiver(new Fnr("00000000009"), tilganger, Collections.emptySet());
         assertThat(innloggetArbeidsgiver.harLeseTilgang(avtale)).isFalse();
     }
 }
